[package]
name = "tm-query"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
base64 = "0.21"
regex = "1.10"
log = "0.4"
env_logger = "0.11"
openai_api_rust = "0.1.9"
opencc-rust = "1.1.19"
futures = "0.3"
rand = "0.8"
