[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chinese-converter>=1.1.1",
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.6",
    "openai>=1.68.2",
    "opencc>=1.1.9",
    "paddleocr>=2.10.0",
    "pydantic>=2.10.6",
    "surya-ocr>=0.13.0",
    "tensorboardx>=2.6.2.2",
    "timm>=1.0.15",
    "transformers>=4.50.0",
]
